--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -56,6 +56,7 @@
         android:ems="10"
         android:inputType="numberDecimal"
         android:text="0.0"
+        android:imeOptions="actionDone"
         app:layout_constraintBottom_toTopOf="@id/update_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
