--- a/app/src/main/res/layout/main_recycler_item.xml
+++ b/app/src/main/res/layout/main_recycler_item.xml
@@ -38,21 +38,25 @@
 
         <TextView
             android:id="@+id/value"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:maxLength="19"
-            android:text="TextView"
+            android:lines="1"
+            android:maxLength="12"
+            android:text="100000000.00"
+            android:gravity="center"
             app:layout_constraintEnd_toStartOf="@+id/checkBox"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/previous"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:maxLength="19"
-            android:text="TextView"
+            android:lines="1"
+            android:maxLength="12"
+            android:text="100000000.00"
+            android:gravity="center"
             android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/checkBox"
@@ -62,11 +66,9 @@
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
             android:ellipsize="end"
             android:maxLines="3"
-            android:text="Name"
+            android:text="NameNameNameNameName\nName\nName"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -78,6 +80,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
+            app:layout_constraintGuide_percent="0.6" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
